adds work logos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,12 @@
     border-left-color: white;
   }
 }
+
+.anfanifi-margin {
+  margin-bottom: -50px;
+}
+
+
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(360deg);
