--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,19 +77,24 @@
 
 
 .title-size {
-    padding-bottom: 1rem;
-    margin-bottom: 4rem;
+    padding-bottom: 0;
+    margin-bottom: 3rem;
     border-bottom: 1px solid #e8e8e8;
 }
 
 .content-title {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 600;
   margin-bottom: 1rem;
 }
 
 .content {
-  max-width: 50%;
+  /*max-width: 50%;*/
+  margin: 0 0 2rem 0;
+}
+
+.experience-section{
+  margin-bottom: 7rem;
 }
 
 .anfanifi-margin {
