--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@
 
 @media screen and (max-width: 768px) {
   .resume .card {
-  padding: 3rem 3rem rem;
+  padding: 3rem 3rem 0rem;
 }
 
 }
@@ -77,7 +77,11 @@
 
 }
 
-
+.cert-logo {
+  margin: 0 0 2rem;
+  max-height: 120px;
+  min-width: 120px;
+}
 
 .card-body {
   -ms-flex: 1 1 auto;
