--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -854,6 +854,15 @@ section {
   border-radius: 50px !important;
 }
 
+.rounded-25 {
+  border-radius: 25px !important;
+}
+
+.rounded-10 {
+  border-radius: 10px !important;
+}
+
+
 .bg__white {
   background-color: #ffffff !important;
 }
