add au post half way

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3253,6 +3253,10 @@ h5 {
   background-color: #0707CF;
 }
 
+.bg_deep_red {
+  background-color: #AF3246;
+}
+
 .wrapper__project.vibrant_blue {
   background-color: #0707CF;
 }
