--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,8 +3249,11 @@ h5 {
   
 }
 
-.bg_vibrant_blue {
-  background-color: #0707CF;
+
+
+
+.bg_light_blue {
+  background-color: #0095F1;
 }
 
 .bg_deep_red {
