--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,8 +3249,15 @@ h5 {
   
 }
 
+.bg_new_purple {
+  background-color: #504CEA;
+}
 
 
+
+.bg_vibrant_blue {
+  background-color: #0707CF;
+}
 
 .bg_light_blue {
   background-color: #0095F1;
